# android-sdk

./: README.md  build.gradle  gradle.properties  publish.gradle  settings.gradle
app/: .gitignore  build.gradle  proguard-rules.pro  publish.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/iproyal/sdk/common/dto/: ServiceConfig.kt  ServiceError.kt  ServiceNotificationPriority.kt  ServiceState.kt  ServiceType.kt
app/src/main/java/com/iproyal/sdk/common/listener/: PawnsServiceListener.kt
app/src/main/java/com/iproyal/sdk/common/sdk/: Pawns.kt
app/src/main/java/com/iproyal/sdk/internal/dto/: SdkErrorType.kt  SdkEvent.kt  SdkParameters.kt  ServiceAction.kt
app/src/main/java/com/iproyal/sdk/internal/logger/: PawnsLogger.kt
app/src/main/java/com/iproyal/sdk/internal/network/: NetworkChecker.kt
app/src/main/java/com/iproyal/sdk/internal/notification/: NotificationManager.kt
app/src/main/java/com/iproyal/sdk/internal/provider/: DependencyProvider.kt
app/src/main/java/com/iproyal/sdk/internal/service/: PeerService.kt  PeerServiceBackground.kt  PeerServiceForeground.kt
app/src/main/java/com/iproyal/sdk/internal/util/: Coroutines.kt  DeviceIdHelper.kt  PermissionUtil.kt  SystemUtils.kt
app/src/main/java/com/iproyal/sdk/public/dto/: ServiceConfig.kt  ServiceError.kt  ServiceNotificationPriority.kt  ServiceState.kt  ServiceType.kt
app/src/main/java/com/iproyal/sdk/public/listener/: PawnsServiceListener.kt
app/src/main/java/com/iproyal/sdk/public/sdk/: Pawns.kt
app/src/main/java/com/pawns/sdk/common/dto/: ServiceConfig.kt  ServiceError.kt  ServiceNotification.kt  ServiceNotificationPriority.kt  ServiceState.kt  ServiceType.kt
app/src/main/java/com/pawns/sdk/common/listener/: PawnsServiceListener.kt
app/src/main/java/com/pawns/sdk/common/sdk/: Pawns.kt
app/src/main/java/com/pawns/sdk/internal/dto/: SdkErrorType.kt  SdkEvent.kt  SdkParameters.kt  ServiceAction.kt
app/src/main/java/com/pawns/sdk/internal/logger/: PawnsLogger.kt
app/src/main/java/com/pawns/sdk/internal/network/: NetworkChecker.kt
app/src/main/java/com/pawns/sdk/internal/notification/: NotificationManager.kt
app/src/main/java/com/pawns/sdk/internal/provider/: DependencyProvider.kt
gradle/wrapper/: gradle-wrapper.properties
pawns-core/: build.gradle
pawns-ndk/: build.gradle  build.gradle.kts  consumer-rules.pro
pawns-ndk/src/main/: CMakeLists.txt
pawns-ndk/src/main/cpp/: native-lib.cpp
pawns-ndk/src/main/cpp/include/x86/: libpawns_mobile_sdk.h
pawns-ndk/src/main/cpp/include/x86_64/: libpawns_mobile_sdk.h
pawns-ndk/src/main/java/com/pawns/ndk/: NativeLib.kt  PawnsCore.kt
(+6 files in other folders)
